# vk-callback-rs

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
deployment/: Dockerfile  config.toml
src/: main.rs
