[package]
name = "callback-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-value = "0.7"
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
toml = "0.5.9"
actix-web="4"
redis = { version = "0.17", features = ["tokio-comp", "aio"] }
redis-async-pool="0.2.4"
